def1.html aktualisieren

--- a/def1.html
+++ b/def1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>VELOCITY SCOUT v11.5</title>
+    <title>VELOCITY SCOUT v11.6</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700;900&family=JetBrains+Mono:wght@500;800&display=swap" rel="stylesheet">
     <style>
         :root { 
@@ -41,8 +41,7 @@
         .scan-btn { width: 100%; background: var(--l-color); color: #000; border: none; padding: 14px; border-radius: 10px; font-weight: 900; font-size: 14px; cursor: pointer; letter-spacing: 1px; }
 
         #feed { padding-bottom: 40px; }
-        .report-card { background: #0d1117; border: 1px solid var(--border); border-radius: 12px; padding: 12px; margin-bottom: 10px; border-top: 3px solid var(--l-color); animation: slideIn 0.2s ease-out; }
-        @keyframes slideIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .report-card { background: #0d1117; border: 1px solid var(--border); border-radius: 12px; padding: 12px; margin-bottom: 10px; border-top: 3px solid var(--l-color); }
         
         .rep-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; }
         .rep-league { background: #161b22; color: #fff; padding: 3px 6px; border-radius: 4px; font-size: 8px; font-weight: 800; }
@@ -56,7 +55,6 @@
 
         .hit-zone { display: flex; gap: 10px; margin-top: 10px; border-top: 1px solid var(--border); padding-top: 10px; justify-content: space-around; }
         .emoji-btn { background: #161b22; border: 1px solid var(--border); font-size: 18px; padding: 8px 30px; border-radius: 10px; cursor: pointer; }
-        .emoji-btn:active { transform: scale(0.9); background: var(--border); }
 
         .theme-eng { --l-color: #ff00ff; }
         .theme-esp { --l-color: #ff4b4b; }
@@ -90,13 +88,13 @@
     </div>
 
     <div class="engine">
-        <div class="row-label">DEF</div>
+        <div class="row-label">DEF (AGAINST)</div>
         <div class="input-grid">
             <div class="unit"><span class="u-label">Save%</span><input type="number" inputmode="decimal" id="v-save" class="u-input"></div>
             <div class="unit"><span class="u-label">PPA</span><input type="number" inputmode="decimal" id="v-ppa-a" class="u-input"></div>
             <div class="unit" style="grid-column: span 2;"><span class="u-label">SCA</span><input type="number" inputmode="decimal" id="v-sca-a" class="u-input"></div>
         </div>
-        <div class="row-label">OFF</div>
+        <div class="row-label">OFF (FOR)</div>
         <div class="input-grid">
             <div class="unit"><span class="u-label">PPA</span><input type="number" inputmode="decimal" id="v-ppa-f" class="u-input"></div>
             <div class="unit"><span class="u-label">npXG/Sh</span><input type="number" inputmode="decimal" id="v-npx" class="u-input" step="0.01"></div>
@@ -108,7 +106,7 @@
 </div>
 
 <script>
-    let stats = JSON.parse(localStorage.getItem('v_scout_stats')) || { total: 0, wins: 0 };
+    let stats = JSON.parse(localStorage.getItem('v_scout_stats_final')) || { total: 0, wins: 0 };
     const dnaConfig = {
         ENG: { ppaA: 15.5, scaA: 27.0, save: 61.0, ppaF: 12.5, npx: 0.12, theme: 'theme-eng' },
         ESP: { ppaA: 11.5, scaA: 21.0, save: 64.0, ppaF: 10.0, npx: 0.11, theme: 'theme-esp' },
@@ -145,9 +143,7 @@
         card.className = `report-card ${config.theme}`;
         card.id = `rep-${id}`;
         card.innerHTML = `
-            <div class="rep-top">
-                <span class="rep-league">${l} RAPORU</span>
-            </div>
+            <div class="rep-top"><span class="rep-league">${l} RAPORU</span></div>
             <div class="rep-main">
                 <div class="rep-gauge">${match}%</div>
                 <div class="rep-details">
@@ -169,14 +165,14 @@
     function markHit(id, isWin) {
         stats.total++;
         if (isWin) stats.wins++;
-        localStorage.setItem('v_scout_stats', JSON.stringify(stats));
+        localStorage.setItem('v_scout_stats_final', JSON.stringify(stats));
         document.getElementById(`rep-${id}`).remove();
         saveFeed();
         updateUI();
     }
 
-    function resetStats() { if(confirm("Sıfırlansın mı?")) { stats = {total:0, wins:0}; localStorage.setItem('v_scout_stats', JSON.stringify(stats)); updateUI(); } }
-    function saveFeed() { localStorage.setItem('v_scout_feed', document.getElementById('feed').innerHTML); }
+    function resetStats() { if(confirm("Sıfırlansın mı?")) { stats = {total:0, wins:0}; localStorage.setItem('v_scout_stats_final', JSON.stringify(stats)); updateUI(); } }
+    function saveFeed() { localStorage.setItem('v_scout_feed_final', document.getElementById('feed').innerHTML); }
     function updateUI() {
         document.getElementById('st-total').innerText = stats.total;
         document.getElementById('st-hit').innerText = stats.wins;
@@ -185,7 +181,7 @@
     }
 
     window.onload = () => {
-        document.getElementById('feed').innerHTML = localStorage.getItem('v_scout_feed') || '';
+        document.getElementById('feed').innerHTML = localStorage.getItem('v_scout_feed_final') || '';
         updateUI();
         applyTheme();
     };
