--- a/analiz1.html
+++ b/analiz1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ScoreMaster AI v7</title>
+    <title>ScoreMaster AI v8</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -20,7 +20,7 @@
     <div class="flex justify-between items-center mb-6 px-1">
         <div>
             <h1 class="text-2xl font-black italic uppercase tracking-tighter">SCORE<span class="accent-green">MASTER</span></h1>
-            <p id="matchCounter" class="text-[9px] text-gray-600 font-bold uppercase tracking-widest">0 Analiz Yapıldı</p>
+            <p id="matchCounter" class="text-[9px] text-gray-600 font-bold uppercase tracking-widest italic">Sistem Hazır</p>
         </div>
         <div class="text-right">
             <span id="globalSuccess" class="text-2xl font-black accent-green leading-none">0%</span>
@@ -29,13 +29,23 @@
     </div>
 
     <div class="fotmob-dark p-5 mb-5 shadow-xl">
+        <select id="leagueSelect" onchange="updateTeams()" class="w-full bg-transparent text-[11px] font-black border-none mb-5 text-gray-500 uppercase tracking-widest text-center focus:ring-0 cursor-pointer">
+            <option value="PL">Premier League</option>
+            <option value="LL">La Liga</option>
+            <option value="SA">Serie A</option>
+            <option value="BL">Bundesliga</option>
+            <option value="L1">Ligue 1</option>
+        </select>
+
         <div class="flex gap-4 mb-6 relative">
             <div class="flex-1 border-b border-gray-800">
                 <input list="homeTeamsList" id="homeTeam" placeholder="Ev Sahibi" class="w-full bg-transparent text-sm py-2 outline-none font-bold uppercase">
+                <datalist id="homeTeamsList"></datalist>
             </div>
             <div class="absolute left-1/2 -translate-x-1/2 top-2 text-[10px] font-black text-gray-800 uppercase italic">vs</div>
             <div class="flex-1 border-b border-gray-800 text-right">
                 <input list="awayTeamsList" id="awayTeam" placeholder="Deplasman" class="w-full bg-transparent text-sm py-2 outline-none text-right font-bold uppercase">
+                <datalist id="awayTeamsList"></datalist>
             </div>
         </div>
 
@@ -57,29 +67,29 @@
             <input type="number" id="a_prgr" class="input-dark" placeholder="—">
         </div>
 
-        <button onclick="calculateAnalysis()" class="w-full bg-[#00ff85] text-black py-4 rounded-xl mt-6 font-black text-xs uppercase italic tracking-widest shadow-lg shadow-green-500/20">Analiz Et</button>
+        <button onclick="calculateAnalysis()" class="w-full bg-[#00ff85] text-black py-4 rounded-xl mt-6 font-black text-xs uppercase italic tracking-widest shadow-lg shadow-green-500/20 active:scale-95 transition-all">Analiz Et</button>
     </div>
 
     <div id="resultArea" class="hidden mb-8 animate-in fade-in zoom-in duration-300">
         <div class="fotmob-dark p-5 border-2 border-green-500/40 bg-gradient-to-b from-green-950/5 to-transparent">
             <div class="flex justify-between items-center mb-4">
                 <span id="matchLabel" class="text-xs font-black accent-green italic uppercase tracking-tighter">MAÇ ANALİZİ</span>
-                <span class="text-[8px] bg-green-900/40 text-green-400 px-2 py-1 rounded font-black">AI AKTİF</span>
+                <span class="text-[8px] bg-green-900/40 text-green-400 px-2 py-1 rounded font-black">AI ANALİZİ BEKLİYOR</span>
             </div>
 
             <div class="grid grid-cols-3 gap-3 mb-6">
                 <div class="text-center bg-black/40 p-3 rounded-xl">
-                    <div class="text-[7px] text-gray-500 mb-1 font-bold">1.5 ALT</div>
+                    <div class="text-[7px] text-gray-500 mb-1 font-bold italic">1.5 ALT</div>
                     <div id="p_alt" class="text-lg font-black">0%</div>
                     <div class="prob-bar"><div id="b_alt" class="prob-fill"></div></div>
                 </div>
                 <div class="text-center bg-black/40 p-3 rounded-xl border border-green-500/20">
-                    <div class="text-[7px] text-gray-400 mb-1 font-bold">TAM 2.0</div>
+                    <div class="text-[7px] text-gray-400 mb-1 font-bold italic">TAM 2.0</div>
                     <div id="p_tam2" class="text-lg font-black accent-green">0%</div>
                     <div class="prob-bar"><div id="b_tam2" class="prob-fill"></div></div>
                 </div>
                 <div class="text-center bg-black/40 p-3 rounded-xl">
-                    <div class="text-[7px] text-gray-500 mb-1 font-bold">TAM 3.0</div>
+                    <div class="text-[7px] text-gray-500 mb-1 font-bold italic">TAM 3.0</div>
                     <div id="p_tam3" class="text-lg font-black">0%</div>
                     <div class="prob-bar"><div id="b_tam3" class="prob-fill"></div></div>
                 </div>
@@ -89,23 +99,37 @@
                 <input type="number" id="finalHome" placeholder="0" class="w-12 bg-black rounded-lg text-center text-sm p-3 border border-gray-800">
                 <span class="text-gray-700 font-black">-</span>
                 <input type="number" id="finalAway" placeholder="0" class="w-12 bg-black rounded-lg text-center text-sm p-3 border border-gray-800">
-                <button onclick="archiveMatch()" class="flex-1 bg-white text-black text-[10px] py-3 rounded-xl font-black uppercase tracking-widest ml-1 shadow-lg active:scale-95 transition-all">Arşivi Güncelle</button>
+                <button onclick="archiveMatch()" class="flex-1 bg-white text-black text-[10px] py-3 rounded-xl font-black uppercase tracking-widest ml-1 shadow-lg active:scale-95 transition-all">Arşivi Güncelle & Sıfırla</button>
             </div>
         </div>
     </div>
 
     <div class="flex justify-between items-center mb-4 px-1 border-b border-gray-900 pb-2">
         <h2 class="text-[10px] font-black text-gray-600 uppercase tracking-[0.3em]">Arşiv</h2>
-        <button onclick="clearHistory()" class="text-[8px] text-red-900 font-black uppercase">Tümünü Temizle</button>
+        <button onclick="clearHistory()" class="text-[8px] text-red-900 font-black uppercase">Tümünü Sil</button>
     </div>
     <div id="archiveList" class="space-y-3"></div>
 
-    <datalist id="homeTeamsList"></datalist>
-    <datalist id="awayTeamsList"></datalist>
-
     <script>
+        const teams = {
+            PL: ["Arsenal", "Aston Villa", "Bournemouth", "Brentford", "Brighton", "Chelsea", "Crystal Palace", "Everton", "Fulham", "Ipswich", "Leicester", "Liverpool", "Man City", "Man Utd", "Newcastle", "Nottm Forest", "Southampton", "Tottenham", "West Ham", "Wolves"],
+            LL: ["Alaves", "Athletic Bilbao", "Atletico Madrid", "Barcelona", "Celta Vigo", "Espanyol", "Getafe", "Girona", "Las Palmas", "Leganes", "Mallorca", "Osasuna", "Rayo Vallecano", "Real Betis", "Real Madrid", "Real Sociedad", "Sevilla", "Valencia", "Valladolid", "Villarreal"],
+            SA: ["Atalanta", "Bologna", "Cagliari", "Como", "Empoli", "Fiorentina", "Genoa", "Inter", "Juventus", "Lazio", "Lecce", "Milan", "Monza", "Napoli", "Parma", "Roma", "Torino", "Udinese", "Venezia", "Verona"],
+            BL: ["Augsburg", "Bayern Munich", "Bochum", "Dortmund", "Frankfurt", "Freiburg", "Gladbach", "Heidenheim", "Hoffenheim", "Holstein Kiel", "Leipzig", "Leverkusen", "Mainz", "St. Pauli", "Stuttgart", "Union Berlin", "Werder Bremen", "Wolfsburg"],
+            L1: ["Angers", "Auxerre", "Brest", "Le Havre", "Lens", "Lille", "Lyon", "Marseille", "Monaco", "Montpellier", "Nantes", "Nice", "PSG", "Reims", "Rennes", "St-Etienne", "Strasbourg", "Toulouse"]
+        };
+
         let history = JSON.parse(localStorage.getItem('matchHistory')) || [];
         let pendingAnalysis = JSON.parse(localStorage.getItem('pendingAnalysis')) || null;
+
+        function updateTeams() {
+            const league = document.getElementById('leagueSelect').value;
+            const hList = document.getElementById('homeTeamsList');
+            const aList = document.getElementById('awayTeamsList');
+            let options = teams[league].map(t => `<option value="${t}">`).join('');
+            hList.innerHTML = options;
+            aList.innerHTML = options;
+        }
 
         function calculateAnalysis() {
             const h = document.getElementById('homeTeam').value;
@@ -145,6 +169,7 @@
         }
 
         function archiveMatch() {
+            if(!pendingAnalysis) return;
             const fh = parseInt(document.getElementById('finalHome').value || 0);
             const fa = parseInt(document.getElementById('finalAway').value || 0);
             const total = fh + fa;
@@ -155,7 +180,6 @@
             history.unshift({ ...pendingAnalysis, score: `${fh}-${fa}`, win, id: Date.now() });
             localStorage.setItem('matchHistory', JSON.stringify(history));
             
-            // Sıfırlama
             localStorage.removeItem('pendingAnalysis');
             pendingAnalysis = null;
             ["h_npxg", "a_npxg", "h_ppa", "a_ppa", "h_sca", "a_sca", "h_prgr", "a_prgr", "finalHome", "finalAway", "homeTeam", "awayTeam"].forEach(id => document.getElementById(id).value = "");
@@ -186,8 +210,9 @@
         }
 
         function deleteMatch(id) { history = history.filter(i => i.id !== id); localStorage.setItem('matchHistory', JSON.stringify(history)); renderHistory(); }
-        function clearHistory() { if(confirm("Arşivi temizle?")) { history = []; localStorage.clear(); location.reload(); } }
+        function clearHistory() { if(confirm("Arşivi temizle?")) { history = []; localStorage.removeItem('matchHistory'); localStorage.removeItem('pendingAnalysis'); location.reload(); } }
 
+        updateTeams();
         if(pendingAnalysis) showAnalysis(pendingAnalysis);
         renderHistory();
     </script>
