--- a/analiz1.html
+++ b/analiz1.html
@@ -3,70 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ScoreMaster v39 - Final</title>
+    <title>ScoreMaster v41 - Precision</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;700;900&display=swap" rel="stylesheet">
     <style>
-        :root { --bg: #0a0a0b; --card: #151517; --accent: #ff3e3e; --green: #00ff85; }
+        :root { --bg: #0d0d0f; --card: #16161a; --accent: #00ff85; --danger: #ff3e3e; }
         body { background: var(--bg); color: #fff; font-family: 'Inter', sans-serif; }
-        .input-group { background: var(--card); border-radius: 20px; padding: 20px; border: 1px solid #252528; }
-        .input-field { background: #1f1f22; border-radius: 10px; border: 1px solid #333; padding: 12px; text-align: center; color: #fff; font-weight: 700; width: 100%; outline: none; transition: 0.2s; }
-        .input-field:focus { border-color: var(--green); box-shadow: 0 0 10px rgba(0,255,133,0.2); }
-        .team-name { background: transparent; border: none; border-bottom: 2px solid #333; font-size: 16px; font-weight: 800; color: #fff; width: 100%; padding: 8px; margin-bottom: 15px; outline: none; text-transform: uppercase; }
-        .tab-btn { padding: 10px 15px; border-radius: 12px; font-size: 11px; font-weight: 800; background: #1f1f22; color: #666; transition: 0.2s; }
-        .tab-btn.active { background: var(--green); color: #000; }
-        .result-card { background: var(--card); border-radius: 20px; padding: 20px; border-left: 6px solid var(--green); margin-top: 20px; }
+        .precision-font { font-family: 'Orbitron', sans-serif; }
+        .input-group { background: var(--card); border-radius: 24px; padding: 24px; border: 1px solid #2a2a30; box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
+        .input-field { background: #1f1f24; border-radius: 12px; border: 1px solid #333; padding: 14px; text-align: center; color: #fff; font-weight: 700; width: 100%; outline: none; transition: 0.3s; }
+        .input-field:focus { border-color: var(--accent); background: #25252b; }
+        .team-input { background: transparent; border: none; border-bottom: 2px solid #333; font-size: 18px; font-weight: 900; color: #fff; width: 100%; padding: 10px; margin-bottom: 20px; outline: none; text-transform: uppercase; letter-spacing: -0.5px; }
+        .tab-btn { padding: 12px 20px; border-radius: 14px; font-size: 12px; font-weight: 900; background: #1f1f24; color: #555; transition: 0.3s; border: 1px solid transparent; }
+        .tab-btn.active { background: var(--accent); color: #000; box-shadow: 0 0 20px rgba(0,255,133,0.3); }
+        .gauge-container { height: 12px; background: #222; border-radius: 6px; overflow: hidden; position: relative; }
+        .gauge-fill { height: 100%; transition: width 1s cubic-bezier(0.17, 0.67, 0.83, 0.67); }
+        .danger-glow { box-shadow: 0 0 15px var(--danger); }
     </style>
 </head>
-<body class="p-4 pb-20">
+<body class="p-5 pb-24">
 
-    <div class="flex justify-between items-center mb-6">
+    <div class="flex justify-between items-center mb-8">
         <div>
-            <h1 class="text-2xl font-black italic tracking-tighter">SCORE<span class="text-red-500">MASTER</span></h1>
-            <p class="text-[9px] opacity-40 font-bold uppercase tracking-widest">v39 Final Engine</p>
+            <h1 class="text-3xl font-black italic tracking-tighter precision-font text-white">V41<span class="text-[#00ff85]">.PRECISION</span></h1>
+            <p class="text-[10px] opacity-50 font-bold uppercase tracking-[0.2em]">Ağırlıklı Milimetrik Analiz</p>
         </div>
-        <div onclick="resetStats()" class="text-right bg-[#1f1f22] px-4 py-2 rounded-xl border border-white/5">
-            <span id="wr" class="text-lg font-black text-[#00ff85]">0%</span>
-            <p class="text-[7px] opacity-40 font-bold uppercase">Başarı</p>
+        <div onclick="resetApp()" class="bg-[#1f1f24] p-3 rounded-2xl border border-white/5 active:scale-90 transition">
+            <span id="wr" class="text-xl font-black text-[#00ff85] block">0%</span>
+            <span class="text-[8px] opacity-40 font-bold uppercase block">Win Rate</span>
         </div>
     </div>
 
-    <div class="flex gap-2 mb-6 overflow-x-auto no-scrollbar pb-2">
-        <button onclick="setL('PL')" id="l-PL" class="tab-btn active">PL</button>
-        <button onclick="setL('LL')" id="l-LL" class="tab-btn">LL</button>
-        <button onclick="setL('SA')" id="l-SA" class="tab-btn">SA</button>
-        <button onclick="setL('BL')" id="l-BL" class="tab-btn">BL</button>
-        <button onclick="setL('L1')" id="l-L1" class="tab-btn">L1</button>
+    <div class="flex gap-2 mb-8 overflow-x-auto no-scrollbar pb-2">
+        <button onclick="setL('PL')" id="l-PL" class="tab-btn active">PREMIER LEAGUE</button>
+        <button onclick="setL('LL')" id="l-LL" class="tab-btn">LA LIGA</button>
+        <button onclick="setL('SA')" id="l-SA" class="tab-btn">SERIE A</button>
+        <button onclick="setL('BL')" id="l-BL" class="tab-btn">BUNDESLIGA</button>
+        <button onclick="setL('L1')" id="l-L1" class="tab-btn">LIGUE 1</button>
     </div>
 
-    <div class="input-group shadow-2xl">
-        <div class="flex gap-4">
+    <div class="input-group">
+        <div class="flex gap-6">
             <div class="w-1/2">
-                <input id="hT" placeholder="EV SAHİBİ" class="team-name" type="text">
-                <div class="space-y-3">
-                    <input type="number" step="0.01" id="h_xg" class="input-field" placeholder="npxG">
-                    <input type="number" id="h_ppa" class="input-field" placeholder="PPA">
-                    <input type="number" id="h_sca" class="input-field" placeholder="SCA">
-                    <input type="number" id="h_pr" class="input-field" placeholder="PrgR">
+                <input id="hName" placeholder="EV TAKIMI" class="team-input" type="text">
+                <div class="space-y-4">
+                    <div><label class="text-[9px] font-bold opacity-30 ml-2">npxG/sh</label><input type="number" step="0.01" id="h_xg" class="input-field" placeholder="0.00"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 ml-2">PPA</label><input type="number" id="h_ppa" class="input-field" placeholder="0"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 ml-2">SCA</label><input type="number" id="h_sca" class="input-field" placeholder="0"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 ml-2">PrgR</label><input type="number" id="h_pr" class="input-field" placeholder="0"></div>
                 </div>
             </div>
             <div class="w-1/2 text-right">
-                <input id="aT" placeholder="DEPLASMAN" class="team-name text-right" type="text">
-                <div class="space-y-3">
-                    <input type="number" step="0.01" id="a_xg" class="input-field" placeholder="npxG">
-                    <input type="number" id="a_ppa" class="input-field" placeholder="PPA">
-                    <input type="number" id="a_sca" class="input-field" placeholder="SCA">
-                    <input type="number" id="a_pr" class="input-field" placeholder="PrgR">
+                <input id="aName" placeholder="DEPLASMAN" class="team-input text-right" type="text">
+                <div class="space-y-4">
+                    <div><label class="text-[9px] font-bold opacity-30 mr-2 text-right block">npxG/sh</label><input type="number" step="0.01" id="a_xg" class="input-field" placeholder="0.00"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 mr-2 text-right block">PPA</label><input type="number" id="a_ppa" class="input-field" placeholder="0"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 mr-2 text-right block">SCA</label><input type="number" id="a_sca" class="input-field" placeholder="0"></div>
+                    <div><label class="text-[9px] font-bold opacity-30 mr-2 text-right block">PrgR</label><input type="number" id="a_pr" class="input-field" placeholder="0"></div>
                 </div>
             </div>
         </div>
-        <button onclick="calculate()" class="w-full bg-[#00ff85] text-black font-black p-5 rounded-xl mt-6 uppercase text-sm tracking-widest shadow-lg shadow-green-500/20 active:scale-95 transition">Analizi Başlat</button>
+        <button onclick="process()" class="w-full bg-[#00ff85] text-black font-black p-5 rounded-2xl mt-8 uppercase text-sm tracking-widest shadow-xl shadow-green-500/20 active:scale-95 transition">Hassas Analiz Yap</button>
     </div>
 
-    <div id="archive" class="mt-8 space-y-4"></div>
+    <div id="results" class="mt-8 space-y-6"></div>
 
     <script>
-        // Senin İstediğin Orijinal Barajlar (Tam 3 Gol Odaklı)
-        const BARAJ = {
+        const LIMITS = {
             PL: [0.11, 22, 48, 95],
             LL: [0.09, 16, 38, 75],
             SA: [0.09, 17, 38, 75],
@@ -74,87 +77,102 @@
             L1: [0.10, 18, 42, 85]
         };
 
-        let curL = 'PL';
+        let currentLig = 'PL';
         function setL(l) {
-            curL = l;
+            currentLig = l;
             document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
             document.getElementById('l-'+l).classList.add('active');
         }
 
-        function calculate() {
-            const hN = document.getElementById('hT').value || "EV";
-            const aN = document.getElementById('aT').value || "DEP";
-            const hv = [document.getElementById('h_xg').value, document.getElementById('h_ppa').value, document.getElementById('h_sca').value, document.getElementById('h_pr').value].map(Number);
-            const av = [document.getElementById('a_xg').value, document.getElementById('a_ppa').value, document.getElementById('a_sca').value, document.getElementById('a_pr').value].map(Number);
+        function process() {
+            const hN = document.getElementById('hName').value || "EV";
+            const aN = document.getElementById('aName').value || "DEP";
+            const hV = [document.getElementById('h_xg').value, document.getElementById('h_ppa').value, document.getElementById('h_sca').value, document.getElementById('h_pr').value].map(Number);
+            const aV = [document.getElementById('a_xg').value, document.getElementById('a_ppa').value, document.getElementById('a_sca').value, document.getElementById('a_pr').value].map(Number);
 
-            if(hv[0] === 0 && av[0] === 0) return;
-
-            // HİBRİT MOTOR: npxG (Ortalama), Diğerleri (Toplam)
-            const matrix = [(hv[0]+av[0])/2, hv[1]+av[1], hv[2]+av[2], hv[3]+av[3]];
-            const b = BARAJ[curL];
+            const matrix = [(hV[0]+aV[0])/2, hV[1]+aV[1], hV[2]+aV[2], hV[3]+aV[3]];
+            const b = LIMITS[currentLig];
             
-            let score = 0;
-            matrix.forEach((val, i) => {
-                if(val >= b[i] * 0.7) score += 1; // 1-2 Gol Barajı
-                if(val >= b[i]) score += 1;       // Tam 3 Gol Barajı
-            });
+            // Milimetrik Ağırlıklı Puanlama (v41)
+            const p_npxg = Math.min((matrix[0] / b[0]) * 40, 50); // npxG %40 (Max 50 can trigger danger)
+            const p_ppa  = Math.min((matrix[1] / b[1]) * 30, 40); // PPA %30
+            const p_sca  = Math.min((matrix[2] / b[2]) * 20, 25); // SCA %20
+            const p_prgr = Math.min((matrix[3] / b[3]) * 10, 15); // PrgR %10
 
-            // Üçlü Bölge Değerlendirmesi
-            let prediction = "1.5 ALT";
-            let color = "#ff3e3e";
-            if(score >= 3) { prediction = "TAM 2.0"; color = "#ffb800"; }
-            if(score >= 5) { prediction = "TAM 3.0"; color = "#00ff85"; }
-            if(score >= 7) { prediction = "3.5 ÜST"; color = "#00ff85"; }
+            const finalScore = Math.round(p_npxg + p_ppa + p_sca + p_prgr);
 
-            const conf = Math.round((score / 8) * 100);
+            let pred = "1.5 ALT"; let clr = "#666"; let status = "KISIR";
+            if(finalScore > 45) { pred = "1.5 ÜST"; clr = "#00d1ff"; status = "DENGELİ"; }
+            if(finalScore > 75) { pred = "TAM 2.0"; clr = "#ffb800"; status = "ÜRETKEN"; }
+            if(finalScore > 95) { pred = "TAM 3.0"; clr = "#00ff85"; status = "AGRESİF"; }
+            if(finalScore >= 110) { pred = "3.5 ÜST"; clr = "#ff3e3e"; status = "TEHLİKE (DANGER)"; }
 
             const card = `
-                <div class="result-card" style="border-left-color: ${color}">
-                    <div class="flex justify-between items-center mb-2">
-                        <span class="text-[9px] font-bold opacity-30 uppercase">${curL} Hubrid v39</span>
-                        <button onclick="this.closest('.result-card').remove(); save();" class="opacity-20">×</button>
-                    </div>
-                    <div class="text-sm font-black mb-4 border-b border-white/5 pb-2">${hN} vs ${aN}</div>
-                    <div class="flex justify-between items-end">
+                <div class="bg-[#16161a] rounded-[32px] p-6 border border-white/5 relative overflow-hidden">
+                    <div class="flex justify-between items-start mb-6">
                         <div>
-                            <p class="text-[10px] font-bold opacity-40 uppercase">Tahmin</p>
-                            <h2 class="text-2xl font-black italic" style="color: ${color}">${prediction}</h2>
+                            <p class="text-[10px] font-bold opacity-30 uppercase tracking-widest">${currentLig} Precision v41</p>
+                            <h3 class="text-lg font-black italic">${hN} vs ${aN}</h3>
+                        </div>
+                        <span class="px-3 py-1 rounded-full bg-white/5 text-[9px] font-black" style="color: ${clr}">${status}</span>
+                    </div>
+
+                    <div class="flex justify-between items-end mb-6">
+                        <div>
+                            <p class="text-[10px] font-black opacity-40 uppercase mb-1">Potansiyel Tahmin</p>
+                            <h2 class="text-4xl font-black italic precision-font" style="color: ${clr}">${pred}</h2>
                         </div>
                         <div class="text-right">
-                            <p class="text-[10px] font-bold opacity-40 uppercase">Güven Oranı</p>
-                            <h2 class="text-xl font-black text-white">${conf}%</h2>
+                            <p class="text-[10px] font-black opacity-40 uppercase mb-1">Enerji Oranı</p>
+                            <h2 class="text-3xl font-black precision-font">%${finalScore}</h2>
                         </div>
                     </div>
-                    <div class="grid grid-cols-2 gap-2 mt-4">
-                        <button onclick="tgl(this,'w')" class="py-3 bg-[#1f1f22] rounded-xl font-black text-[10px] uppercase">Kazandı</button>
-                        <button onclick="tgl(this,'l')" class="py-3 bg-[#1f1f22] rounded-xl font-black text-[10px] uppercase">Kaybetti</button>
+
+                    <div class="gauge-container mb-6">
+                        <div class="gauge-fill ${finalScore >= 110 ? 'danger-glow' : ''}" style="width: ${Math.min(finalScore, 100)}%; background: ${clr}"></div>
+                    </div>
+
+                    <div class="grid grid-cols-4 gap-2 text-[8px] font-bold opacity-30 uppercase text-center mb-6">
+                        <div class="bg-white/5 p-2 rounded-lg">npxG: ${Math.round(p_npxg)}p</div>
+                        <div class="bg-white/5 p-2 rounded-lg">PPA: ${Math.round(p_ppa)}p</div>
+                        <div class="bg-white/5 p-2 rounded-lg">SCA: ${Math.round(p_sca)}p</div>
+                        <div class="bg-white/5 p-2 rounded-lg">PrgR: ${Math.round(p_prgr)}p</div>
+                    </div>
+
+                    <div class="grid grid-cols-2 gap-3">
+                        <button onclick="tgl(this,'w')" class="py-4 bg-[#1f1f24] rounded-2xl font-black text-xs uppercase tracking-widest transition">Kazandı</button>
+                        <button onclick="tgl(this,'l')" class="py-4 bg-[#1f1f24] rounded-2xl font-black text-xs uppercase tracking-widest transition">Kaybetti</button>
                     </div>
                 </div>`;
-            document.getElementById('archive').insertAdjacentHTML('afterbegin', card);
-            save();
+            
+            document.getElementById('results').insertAdjacentHTML('afterbegin', card);
+            saveData();
         }
 
         function tgl(btn, type) {
-            btn.parentElement.querySelectorAll('button').forEach(b => { b.style.background = '#1f1f22'; b.style.color = '#fff'; });
+            btn.parentElement.querySelectorAll('button').forEach(b => { b.style.background = '#1f1f24'; b.style.color = '#fff'; });
             btn.style.background = type === 'w' ? '#00ff85' : '#ff3e3e';
             btn.style.color = '#000';
-            updateWR(); save();
+            updateWR(); saveData();
         }
 
         function updateWR() {
-            const cards = document.querySelectorAll('.result-card');
+            const cards = document.querySelectorAll('.bg-[#16161a]');
             let w = 0, t = 0;
             cards.forEach(c => {
                 const wb = c.querySelector('button[onclick*="\'w\'"]');
-                if(wb.style.background.includes('rgb(0, 255, 133)')) { w++; t++; }
-                else if(c.querySelector('button[onclick*="\'l\'"]').style.background.includes('rgb(255, 62, 62)')) { t++; }
+                if(wb && wb.style.background.includes('rgb(0, 255, 133)')) { w++; t++; }
+                else {
+                    const lb = c.querySelector('button[onclick*="\'l\'"]');
+                    if(lb && lb.style.background.includes('rgb(255, 62, 62)')) { t++; }
+                }
             });
             document.getElementById('wr').innerText = t > 0 ? Math.round((w/t)*100) + "%" : "0%";
         }
 
-        function save() { localStorage.setItem('sm_v39_final', document.getElementById('archive').innerHTML); }
-        function resetStats() { if(confirm("Tüm Arşiv Silinsin mi?")) { localStorage.clear(); location.reload(); } }
-        window.onload = () => { document.getElementById('archive').innerHTML = localStorage.getItem('sm_v39_final') || ''; updateWR(); };
+        function saveData() { localStorage.setItem('sm_v41_final', document.getElementById('results').innerHTML); }
+        function resetApp() { if(confirm("Tüm veriler sıfırlansın mı?")) { localStorage.clear(); location.reload(); } }
+        window.onload = () => { document.getElementById('results').innerHTML = localStorage.getItem('sm_v41_final') || ''; updateWR(); };
     </script>
 </body>
 </html>
